--- a/src/components/BackgroundEffects.astro
+++ b/src/components/BackgroundEffects.astro
@@ -14,6 +14,46 @@
     <div class="floating-symbol s8">()</div>
     <div class="floating-symbol s9">+=</div>
     <div class="floating-symbol s10">~</div>
+    <div class="floating-symbol s11">*</div>
+    <div class="floating-symbol s12">&</div>
+    <div class="floating-symbol s13">^</div>
+    <div class="floating-symbol s14">%</div>
+    <div class="floating-symbol s15">$</div>
+    <div class="floating-symbol s16">!</div>
+    <div class="floating-symbol s17">?</div>
+    <div class="floating-symbol s18">|</div>
+    <div class="floating-symbol s19">\</div>
+    <div class="floating-symbol s20">[]</div>
+    <div class="floating-symbol s21">{}</div>
+    <div class="floating-symbol s22">&&</div>
+    <div class="floating-symbol s23">||</div>
+    <div class="floating-symbol s24">//</div>
+    <div class="floating-symbol s25">/* */</div>
+    <div class="floating-symbol s26">&&</div>
+    <div class="floating-symbol s27">||</div>
+    <div class="floating-symbol s28">=></div>
+    <div class="floating-symbol s29">!=</div>
+    <div class="floating-symbol s30">++</div>
+    <div class="floating-symbol s31">--</div>
+    <div class="floating-symbol s32">-></div>
+    <div class="floating-symbol s33">@</div>
+    <div class="floating-symbol s34">!</div>
+    <div class="floating-symbol s35">`</div>
+    <div class="floating-symbol s36">...</div>
+    <div class="floating-symbol s37">./</div>
+    <div class="floating-symbol s38">../</div>
+    <div class="floating-symbol s39">0x</div>
+    <div class="floating-symbol s40">1x</div>
+    <div class="floating-symbol s41">_</div>
+    <div class="floating-symbol s42">-</div>
+    <div class="floating-symbol s43">/</div>
+    <div class="floating-symbol s44">\</div>
+    <div class="floating-symbol s45">::</div>
+    <div class="floating-symbol s46">..</div>
+    <div class="floating-symbol s47">()</div>
+    <div class="floating-symbol s48">{}</div>
+    <div class="floating-symbol s49">[]</div>
+    <div class="floating-symbol s50">$</div>
 </div>
 <style>
     .background-effects {
@@ -81,4 +121,44 @@
     .s8 { top: 40%; left: 60%; font-size: 1.7em; color: var(--terminal-green); animation-duration: 11s; animation-delay: 5s; }
     .s9 { top: 70%; left: 80%; font-size: 1.0em; color: var(--terminal-purple); animation-duration: 13s; animation-delay: 2.5s; }
     .s10 { top: 5%; right: 40%; font-size: 1.9em; color: var(--terminal-cyan); animation-duration: 15s; animation-delay: 6s; }
+    .s11 { top: 15%; left: 25%; font-size: 1.2em; color: var(--terminal-red); animation-duration: 9s; animation-delay: 4.5s; }
+    .s12 { top: 25%; right: 35%; font-size: 1.4em; color: var(--terminal-yellow); animation-duration: 7s; animation-delay: 1.5s; }
+    .s13 { top: 35%; left: 55%; font-size: 1.6em; color: var(--terminal-orange); animation-duration: 11s; animation-delay: 3.5s; }
+    .s14 { top: 45%; right: 5%; font-size: 1.1em; color: var(--terminal-pink); animation-duration: 6s; animation-delay: 2.5s; }
+    .s15 { top: 55%; left: 10%; font-size: 1.8em; color: var(--terminal-green); animation-duration: 14s; animation-delay: 5.5s; }
+    .s16 { top: 65%; right: 30%; font-size: 1.3em; color: var(--terminal-purple); animation-duration: 8s; animation-delay: 0.5s; }
+    .s17 { top: 75%; left: 45%; font-size: 1.5em; color: var(--terminal-cyan); animation-duration: 12s; animation-delay: 6.5s; }
+    .s18 { top: 85%; right: 50%; font-size: 1.0em; color: var(--terminal-red); animation-duration: 10s; animation-delay: 3s; }
+    .s19 { top: 5%; left: 70%; font-size: 1.9em; color: var(--terminal-yellow); animation-duration: 16s; animation-delay: 7s; }
+    .s20 { top: 95%; left: 2%; font-size: 1.4em; color: var(--terminal-orange); animation-duration: 9s; animation-delay: 1s; }
+    .s21 { top: 50%; right: 90%; font-size: 1.6em; color: var(--terminal-pink); animation-duration: 11s; animation-delay: 4s; }
+    .s22 { top: 20%; left: 85%; font-size: 1.2em; color: var(--terminal-green); animation-duration: 7s; animation-delay: 2.2s; }
+    .s23 { top: 40%; right: 70%; font-size: 1.7em; color: var(--terminal-purple); animation-duration: 13s; animation-delay: 5.8s; }
+    .s24 { top: 60%; left: 40%; font-size: 1.1em; color: var(--terminal-cyan); animation-duration: 8s; animation-delay: 3.2s; }
+    .s25 { top: 80%; right: 60%; font-size: 1.5em; color: var(--terminal-red); animation-duration: 10s; animation-delay: 1.8s; }
+    .s26 { top: 12%; left: 88%; font-size: 1.3em; color: var(--terminal-green); animation-duration: 8s; animation-delay: 1.2s; }
+    .s27 { top: 22%; right: 12%; font-size: 1.5em; color: var(--terminal-purple); animation-duration: 10s; animation-delay: 3.2s; }
+    .s28 { top: 82%; left: 18%; font-size: 1.9em; color: var(--terminal-cyan); animation-duration: 9s; animation-delay: 2.1s;}
+    .s29 { top: 62%; right: 22%; font-size: 1.6em; color: var(--terminal-pink); animation-duration: 11s; animation-delay: 4.3s;}
+    .s30 { top: 32%; left: 32%; font-size: 1.4em; color: var(--terminal-yellow); animation-duration: 12s; animation-delay: 1.5s; }
+    .s31 { top: 52%; left: 52%; font-size: 1.7em; color: var(--terminal-orange); animation-duration: 14s; animation-delay: 5s; }
+    .s32 { top: 92%; right: 8%; font-size: 1.2em; color: var(--terminal-red); animation-duration: 7s; animation-delay: 2.5s; }
+    .s33 { top: 42%; left: 62%; font-size: 1.8em; color: var(--terminal-green); animation-duration: 13s; animation-delay: 6s; }
+    .s34 { top: 72%; left: 82%; font-size: 1.1em; color: var(--terminal-purple); animation-duration: 15s; animation-delay: 3.5s; }
+    .s35 { top: 8%; right: 42%; font-size: 2.0em; color: var(--terminal-cyan); animation-duration: 17s; animation-delay: 7s; }
+    .s36 { top: 18%; left: 28%; font-size: 1.3em; color: var(--terminal-red); animation-duration: 11s; animation-delay: 5.5s; }
+    .s37 { top: 28%; right: 38%; font-size: 1.5em; color: var(--terminal-yellow); animation-duration: 9s; animation-delay: 2.5s; }
+    .s38 { top: 38%; left: 58%; font-size: 1.7em; color: var(--terminal-orange); animation-duration: 13s; animation-delay: 4.5s; }
+    .s39 { top: 48%; right: 8%; font-size: 1.2em; color: var(--terminal-pink); animation-duration: 8s; animation-delay: 3.5s; }
+    .s40 { top: 58%; left: 12%; font-size: 1.9em; color: var(--terminal-green); animation-duration: 16s; animation-delay: 6.5s; }
+    .s41 { top: 68%; right: 32%; font-size: 1.4em; color: var(--terminal-purple); animation-duration: 10s; animation-delay: 1.5s; }
+    .s42 { top: 78%; left: 48%; font-size: 1.6em; color: var(--terminal-cyan); animation-duration: 14s; animation-delay: 7.5s; }
+    .s43 { top: 88%; right: 52%; font-size: 1.1em; color: var(--terminal-red); animation-duration: 12s; animation-delay: 4s; }
+    .s44 { top: 8%; left: 72%; font-size: 2.0em; color: var(--terminal-yellow); animation-duration: 18s; animation-delay: 8s; }
+    .s45 { top: 98%; left: 4%; font-size: 1.5em; color: var(--terminal-orange); animation-duration: 11s; animation-delay: 2s; }
+    .s46 { top: 55%; right: 92%; font-size: 1.7em; color: var(--terminal-pink); animation-duration: 13s; animation-delay: 5s; }
+    .s47 { top: 25%; left: 82%; font-size: 1.3em; color: var(--terminal-green); animation-duration: 9s; animation-delay: 3.2s; }
+    .s48 { top: 45%; right: 72%; font-size: 1.8em; color: var(--terminal-purple); animation-duration: 15s; animation-delay: 6.8s; }
+    .s49 { top: 65%; left: 42%; font-size: 1.2em; color: var(--terminal-cyan); animation-duration: 10s; animation-delay: 4.2s; }
+    .s50 { top: 85%; right: 62%; font-size: 1.6em; color: var(--terminal-red); animation-duration: 12s; animation-delay: 2.8s; }
 </style> 
