--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -8,7 +8,7 @@ import type { ImageMetadata } from 'astro';
 
 interface Props {
 	title: string;
-	description?: string;
+	description: string;
 	image?: ImageMetadata;
 }
 
@@ -58,4 +58,4 @@ const imageURL = getImageURL();
 <!-- Primary Meta Tags -->
 <title>{title}</title>
 <meta name="title" content={title} />
-{description && <meta name="description" content={description} />}
+<meta name="description" content={description} />
